# Motion-Planning

code/L2/matlab版本作业/code/: A_star_search.m  Dijkstra_100.fig  Dijkstra_250.fig  Distance_100.fig  Distance_250.fig  Manhanttan_100.fig  main.m
code/L2/navigation_astar/grid/: package.xml
code/L2/navigation_astar/waypoint/: package.xml
code/L2_search-based_path_finding/matlab版本作业/code/: A_star_search.m  Manhanttan_250.fig  (+2 more)
code/L2_search-based_path_finding/navigation_astar/: README.en.md  README.md
code/L2_search-based_path_finding/navigation_astar/grid/: CMakeLists.txt
code/L2_search-based_path_finding/navigation_astar/grid/include/grid/: Astar_searcher.h  node.h
code/L2_search-based_path_finding/navigation_astar/grid/launch/: random_map.launch
code/L2_search-based_path_finding/navigation_astar/grid/launch/rviz_config/: demo.rviz  random_map.rviz
code/L2_search-based_path_finding/navigation_astar/grid/src/: Astar_searcher.cpp  call_node.cpp  random_complex_generator.cpp
code/L3/Matlab作业/: Delta30.fig  Delta90.fig  RRT.m  RRTStar.asv  RRTStar.m
code/L3_sample-based_path_finding/Matlab作业/: Delta60.fig  RRTStar.m  RRT_star.fig  collisionChecking.m
code/L5/matlab/: getAbeq.m  getCt.asv  getM.m  getQ.m  hw1_2.asv
code/L5_Minimum_snap_trajectory_generation/matlab/: getCt.m  getQ.m  hw1_1.m  hw1_2.m
code/L6_Soft_and_hard_constrained_trajectory_generation/code/: getAbeq.m  getAbieq.m  getQM.m  hw6.m
code/L7/: real_time_dynamic_programming.py
code/L7_MDP_based_planning/: consumed_time.txt  dynamic_programming.py  real_time_dynamic_programming.py
(+47 files in other folders)
